[gd_scene load_steps=5 format=3 uid="uid://brxqln412wok4"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ofys3"]
[ext_resource type="Texture2D" uid="uid://bu1fpe5gebwpu" path="res://assets/player/player.png" id="2_lo2dy"]
[ext_resource type="AudioStream" uid="uid://cmkg4rbe1w6jt" path="res://assets/sounds/snow_sound.wav" id="3_1sf4i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5idw0"]
radius = 11.0
height = 32.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
collision_mask = 28
script = ExtResource("1_ofys3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_lo2dy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5idw0")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="DefrostTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootDelay" type="Timer" parent="."]

[node name="snow_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1sf4i")
volume_db = -11.0

[connection signal="timeout" from="DefrostTimer" to="." method="_on_defrost_timer_timeout"]
[connection signal="timeout" from="ShootDelay" to="." method="_on_shoot_delay_timeout"]
